adds fs dependency to development side of package.json

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/vokoshyv/riotAPIChallenge/issues"
+  },
+  "devDependencies": {
+    "fs": "0.0.2"
   }
 }
