--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/vokoshyv/riotAPIChallenge/issues"
   },
   "devDependencies": {
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "request": "~2.61.0"
   }
 }
