installing mysql node dependencies on package.json file

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "request": "~2.61.0"
   },
   "dependencies": {
-    "express": "~4.13.3"
+    "express": "~4.13.3",
+    "node-mysql": "~0.4.2",
+    "mysql": "~2.9.0"
   }
 }
