--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.13.3",
     "mysql": "~2.9.0",
     "sequelize": "~3.6.0",
-    "node-mysql": "~0.4.2"
+    "node-mysql": "~0.4.2",
+    "lodash": "~3.10.1"
   }
 }
