--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mysql": "~2.9.0",
     "sequelize": "~3.6.0",
     "node-mysql": "~0.4.2",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "consolidate": "~0.13.1",
+    "handlebars": "~3.0.3"
   }
 }
